Modules-Project-Layout
Modules-Project-Layout

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ Locals/.terraform.lock.hcl
 Datasources/.terraform.lock.hcl
 Templates-Files/.terraform.lock.hcl
 Providers/.terraform.lock.hcl
+Variables/.terraform.lock.hcl
